--- a/inmoov_control/CMakeLists.txt
+++ b/inmoov_control/CMakeLists.txt
@@ -4,6 +4,9 @@ project(inmoov_control)
 find_package(catkin REQUIRED COMPONENTS
 )
 
+catkin_package()
+
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
+
