Add licensing information

--- a/inmoov_description/package.xml
+++ b/inmoov_description/package.xml
@@ -6,8 +6,7 @@
 
   <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>
 
-  <license>TODO</license>
-
+  <license>BSD-3</license>
 
   <!--<url>...<url>-->
 
