--- a/inmoov_control/CMakeLists.txt
+++ b/inmoov_control/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(inmoov_control)
 
-find_package(catkin REQUIRED COMPONENTS
-)
+find_package(catkin REQUIRED COMPONENTS)
 
 catkin_package()
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
-
