--- a/inmoov_control/package.xml
+++ b/inmoov_control/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>
 
-  <license>TODO</license>
+  <license>BSD-3</license>
 
   <!--<url>...<url>-->
 
