--- a/inmoov_control/config/inmoov_control.yaml
+++ b/inmoov_control/config/inmoov_control.yaml
@@ -40,26 +40,60 @@ inmoov:
     joints:
       - waist_rotate
       - waist_lean
-  
-  r_hand_controller:
-    type: position_controllers/JointTrajectoryController
-    joints:
-      - right_indexPIP
-      - right_middlePIP
-      - right_pinkyMCP
-      - right_ringMCP
-      - right_thumbMCP
-
-  l_hand_controller:
-    type: position_controllers/JointTrajectoryController
-    joints:
-      - left_indexPIP
-      - left_middlePIP
-      - left_pinkyMCP
-      - left_ringMCP
-      - left_thumbMCP
 
  # Position Controllers ----------------------------------------
+  #Right Hand
+  right_thumb_controller:
+    type: effort_controllers/JointPositionController
+    joint: right_thumbMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  right_index_controller:
+    type: effort_controllers/JointPositionController
+    joint: right_indexPIP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  right_middle_controller:
+    type: effort_controllers/JointPositionController
+    joint: right_middlePIP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  right_ring_controller:
+    type: effort_controllers/JointPositionController
+    joint: right_ringMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  right_pinky_controller:
+    type: effort_controllers/JointPositionController
+    joint: right_pinkyMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  #Left Hand
+  left_thumb_controller:
+    type: effort_controllers/JointPositionController
+    joint: left_thumbMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  left_index_controller:
+    type: effort_controllers/JointPositionController
+    joint: left_indexPIP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  left_middle_controller:
+    type: effort_controllers/JointPositionController
+    joint: left_middlePIP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  left_ring_controller:
+    type: effort_controllers/JointPositionController
+    joint: left_ringMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
+  left_pinky_controller:
+    type: effort_controllers/JointPositionController
+    joint: left_pinkyMCP
+    pid: {p: 10, i: 1, d: 0.1}
+
   # Head
   jaw_position_controller:
     type: effort_controllers/JointPositionController
@@ -77,7 +111,7 @@ inmoov:
     pid: {p: 1.0, i: 0.01, d: 0}
 
  # "Fake" Scaled Position Controllers---------------------------
-  # Right
+  # Right Hand
   right_thumbCMC_position_controller:
     type: effort_controllers/JointPositionController
     joint: right_thumbCMC
@@ -138,7 +172,7 @@ inmoov:
     joint: right_pinkyDIP
     pid: {p: 10, i: 1, d: 0.1}
 
-  # Left
+  # Left Hand
   left_thumbCMC_position_controller:
     type: effort_controllers/JointPositionController
     joint: left_thumbCMC
